# ocean-data-qc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: format_lint_and_test.yml
src/fyskemqc/: base_qc_category.py  detection_limit_qc.py  errors.py  fyskemqc.py  metadataqc.py  parameter.py  qc_checks.py  qc_configuration.py  qc_flag.py  qc_flag_tuple.py  qc_flags.py  range_qc.py  visit.py
src/fyskemqc/configs/: checks.yaml  detection_limit_check.yaml  range_check.yaml
src/fyskemqc/metadata_qc/: base_metadata_qc_category.py  metadata_flag.py  wadep_qc.py
src/ocean_data_qc/: errors.py  fyskemqc.py  metadataqc.py  statistic.py
src/ocean_data_qc/fyskem/: base_qc_category.py  consistency_qc.py  dependency_qc.py  detection_limit_qc.py  detectionlimit_qc.py  generate_statistic_config.py  gradient_qc.py  h2s_qc.py  increasedecrease_qc.py  parameter.py  qc_checks.py  qc_configuration.py  qc_flag.py  qc_flag_tuple.py  qc_flags.py  quantification_limit_qc.py  range_qc.py  repeated_value_qc.py  spike_qc.py  stability_qc.py  statistic_qc.py  total_qc.py
src/ocean_data_qc/fyskem/configs/: consistency_check.yaml  dependency_check.yaml  detection_limit_check.yaml  gradient_check.yaml  h2s_check.yaml  increasedecrease_check.yaml  quantificationlimit_check.yaml  range_check.yaml  repeated_value_check.yaml  spike_check.yaml  stability_check.yaml  statistic_check.yaml  total_check.yaml
src/ocean_data_qc/fyskem/configs/statistic_check_data/: ALKY.txt  AMON.txt  CPHL.txt  DOXY_BTL.txt  DOXY_CTD.txt  H2S.txt  HUMUS.txt  NTOT.txt  NTRA.txt  NTRI.txt  NTRZ.txt  PH.txt  PHOS.txt  PH_LAB.txt  PTOT.txt  SALT_BTL.txt  SALT_CTD.txt  SECCHI.txt  SIO3-SI.txt  TEMP_BTL.txt  TEMP_CTD.txt  din.txt  doxy.txt  oxygen_saturation.txt  salt.txt  temp.txt
src/ocean_data_qc/metadata/: base_metadata_qc_category.py  common_values_qc.py  date_qc.py  metadata_qc_field.py  position_qc.py  visit.py  wadep_qc.py
tests/: setup_methods.py  test_detection_limit_qc.py  test_fyskemqc.py  test_parameter.py  test_qc_configuration.py  test_qc_flag.py  test_qc_flag_tuple.py  test_qc_flags.py  test_range_qc.py  test_read_csv_data.py  test_read_lims_data.py  test_total_flag.py  test_visit.py
tests/fyskem/: test_concistency_qc.py  test_dependency_qc.py  test_detection_limit_qc.py  test_fyskemqc.py  test_gradient_qc.py  test_h2s_qc.py  test_increasedecrease_qc.py  test_parameter.py  test_qc_configuration.py  test_qc_flag.py  test_qc_flag_tuple.py  test_qc_flags.py  test_quantification_limit_qc.py  test_range_qc.py  test_repeatedvalue_qc.py  test_spike_qc.py  test_stability_qc.py  test_statistic_qc.py  test_total_flag.py
tests/metadata/: test_common_values_qc.py  test_date_qc.py  test_metadataqc.py  test_position_qc.py  test_visit.py  test_wadep_qc.py
tests/test_data/LIMS_data/Raw_data/: analyse_info.txt  data.txt  sampling_info.txt
