[project]
name = "fyskemqc"
version = "2024.2"
description = "Automatisk kvalitetskontroll av lågupplöst data"
authors = [
    { name = "Jonatan Skogsfors", email = "jonatan.skogsfors@smhi.se" },
]
dependencies = [
    "pandas>=2.2.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fyskemqc" = ["*.yaml"]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.3.4",
    "pre-commit>=3.5.0",
]

[tool.ruff]
line-length = 90
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
