[project]
name = "ocean-data-qc"
version = "2024.6.2"
description = "Automatisk kvalitetskontroll av lågupplöst data"
authors = [
    { name = "Jonatan Skogsfors", email = "jonatan.skogsfors@smhi.se" },
]
dependencies = [
    "pandas>=2.2.1",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "pyproj>=3.6.1",
    "ruff>=0.6.9",
]
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.package-data]
"fyskemqc" = ["*.yaml"]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.3.4",
    "pre-commit>=3.5.0",
    "freezegun>=1.5.1",
]

[tool.ruff]
line-length = 90
indent-width = 4
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "F",  # pyflakes
    "E", # pycodestyle: error
    "W",  # pycodestyle: warning
    "I",  # isort
    "RUF"  # Ruff-specific rules
]
